<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">مدیریت زمان شخصی</string>
    <string name="nav_dashboard">داشبورد</string>
    <string name="nav_attendance">تردد</string>
    <string name="nav_tasks">تسک‌ها</string>
    <string name="nav_reports">گزارشات</string>
    <string name="nav_calendar">تقویم</string>
    <string name="nav_settings">تنظیمات</string>
    <string name="widget_hours_desc">ساعت کار امروز</string>
    <string name="widget_work_desc">ورود و خروج سریع</string>
</resources>
