<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_attendance"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_attendance" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_settings" />
</menu>
